[gd_scene load_steps=4 format=3 uid="uid://pg1a3fjur8t5"]

[ext_resource type="Script" path="res://scripts/dialog.gd" id="1_324mt"]
[ext_resource type="FontFile" uid="uid://ky6gsmqdlda4" path="res://fonts/Gbboot-ALpM.ttf" id="1_yyiif"]
[ext_resource type="Theme" uid="uid://rbt4kjtnhrdu" path="res://themes/simple_theme.tres" id="2_rfdde"]

[node name="Dialog" type="CanvasLayer"]
script = ExtResource("1_324mt")

[node name="DialogPanel" type="Panel" parent="."]
visible = false
offset_left = 8.0
offset_top = 96.0
offset_right = 152.0
offset_bottom = 152.0
theme = ExtResource("2_rfdde")

[node name="Message" type="Label" parent="DialogPanel"]
layout_mode = 1
offset_left = 8.0
offset_top = 8.0
offset_right = 136.0
offset_bottom = 50.0
theme_override_fonts/font = ExtResource("1_yyiif")
theme_override_font_sizes/font_size = 10
text = "Message"
autowrap_mode = 2

[node name="DialogTimer" type="Timer" parent="DialogPanel"]
wait_time = 4.0

[connection signal="timeout" from="DialogPanel/DialogTimer" to="." method="_on_dialog_timer_timeout"]
